implement a couple of methods for Devices and Customers
* Create DTOs and repositories.
* Clean up the API a bit more
