# src/main/java/it/albx79/telepass/cusdev/customers/CustomerDto.java
@@ -1,0 +1,21 @@
+package it.albx79.telepass.cusdev.customers;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+@Data
+@AllArgsConstructor
+@Entity
+public class CustomerDto {
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private String id;
+    private String name;
+    private String surname;
+    private String address;
+    private String taxCode;
+}
