# src/main/resources/api.yaml
@@ -4,6 +4,21 @@ info:
   version: 1.0.0
   description: Manage CRUD operations on customers and their devices
 paths:
+  /customers:
+    post:
+      operationId: createCustomer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Customer'
+      responses:
+        201:
+          description: the customer was created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Customer'
   /customers/{customerId}:
     get:
       operationId: getCustomer
@@ -42,6 +57,21 @@ paths:
       responses:
         204:
           description: address updated
+  /devices/:
+    post:
+      operationId: createDevice
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Device'
+      responses:
+        201:
+          description: the device was created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Device'
   /devices/{deviceCode}:
     get:
       operationId: getDevice
@@ -51,6 +81,7 @@ paths:
           name: deviceCode
           schema:
             type: string
+            format: uuid
           required: true
       responses:
         200:
@@ -59,6 +90,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Device'
+    delete:
+      operationId: deleteDevice
+      parameters:
+        - *deviceCode
+      responses:
+        204:
+          description: the device was deleted
+  /devices/{deviceCode}/exists:
+    get:
+      operationId: deviceExists
+      parameters:
+        - *deviceCode
+      responses:
+        200:
+          description: whether the given device is present in our DB
+          content:
+            application/json:
+              schema:
+                type: boolean
   /devices/{deviceCode}/status:
     put:
       operationId: updateDeviceStatus
@@ -102,11 +152,6 @@ components:
           format: uuid
         status:
           $ref: '#/components/schemas/DeviceStatus'
-        customers:
-          type: array
-          maxLength: 2
-          items:
-            $ref: '#/components/schemas/Customer'
     DeviceStatus:
       type: string
       enum: [ACTIVE, INACTIVE, LOST]
